--- a/package.json
+++ b/package.json
@@ -139,10 +139,11 @@
     "docs": "aegir docs"
   },
   "dependencies": {
-    "@libp2p/interface-peer-id": "^2.0.0",
-    "debug": "^4.3.3",
-    "interface-datastore": "^8.0.0",
-    "multiformats": "^11.0.0"
+    "@libp2p/interface-peer-id": "^2.0.2",
+    "@multiformats/multiaddr": "^12.1.3",
+    "debug": "^4.3.4",
+    "interface-datastore": "^8.2.0",
+    "multiformats": "^11.0.2"
   },
   "devDependencies": {
     "@types/debug": "^4.1.7",
