--- a/package.json
+++ b/package.json
@@ -146,7 +146,9 @@
     "multiformats": "^11.0.2"
   },
   "devDependencies": {
+    "@libp2p/peer-id": "^2.0.3",
     "@types/debug": "^4.1.7",
-    "aegir": "^38.1.7"
+    "aegir": "^38.1.7",
+    "uint8arrays": "^4.0.3"
   }
 }
